Match API spec more to automated tests
